# fallout2-re

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: Build.yml  ci-build.yml
src/: ability.c  actions.c  actions.h  animation.c  animation.h  args.c  art.c  art.h  audio.c  audio.h  audio_file.c  audio_file.h  automap.c  automap.h  cache.c  cache.h  cd.c  cd.h  character_editor.c  character_editor.h  character_selector.c  character_selector.h  color.c  color.h  combat.c  combat.h  combat_ai.c  combat_ai.h  combat_defs.h  config.c  core.c  core.h  counter.c  credits.c  critter.c  critter.h  cycle.c  cycle.h  datafile.c  datafile.h  (+174 more)
src/game/: ability.c  ability.h  actions.c  actions.h  amutex.c  amutex.h  anim.c  anim.h  art.c  art.h  artload.c  artload.h  automap.c  automap.h  bmpdlog.c  bmpdlog.h  cache.c  cache.h  cd.c  cd.h  combat.c  combat.h  combat_defs.h  combatai.c  combatai.h  combatai_defs.h  config.c  config.h  counter.c  counter.h  credits.c  credits.h  critter.c  critter.h  cycle.c  cycle.h  diskspce.c  diskspce.h  display.c  display.h  (+109 more)
src/int/: audio.c  audio.h  audiof.c  audiof.h  datafile.c  datafile.h  dialog.c  dialog.h  export.c  export.h  intlib.c  intlib.h  intrpret.c  intrpret.h  memdbg.c  memdbg.h  mousemgr.c  mousemgr.h  movie.c  movie.h  nevs.c  nevs.h  pcx.c  pcx.h  region.c  region.h  share1.c  share1.h  sound.c  sound.h  widget.c  widget.h  window.c  window.h
src/int/support/: intextra.c  intextra.h
src/plib/assoc/: assoc.c  assoc.h
src/plib/color/: color.c  color.h
src/plib/db/: db.c  db.h
src/plib/gnw/: button.c  button.h  debug.c  debug.h  doscmdln.c  doscmdln.h  dxinput.c  dxinput.h  gnw.c  gnw.h  gnw95dx.c  gnw95dx.h  gnw_types.h  grbuf.c  grbuf.h  input.c  input.h  intrface.c  intrface.h  kb.c  kb.h  memory.c  memory.h  mouse.c  mouse.h  rect.c  rect.h  svga.c  svga.h  svga_types.h  text.c  text.h  vcr.c  vcr.h  winmain.c  winmain.h
src/plib/xfile/: dfile.c  dfile.h  xfile.c  xfile.h  xsys_find.c  xsys_find.h
